Refactor app structure and enhance login flow
Migrated components and services to a new organized src/ directory, introduced reusable UI components, and improved the authentication flow for new and returning users with OTP-based quick login. Updated Controls to be fixed at the bottom, enhanced input validation in LoginScreen, and revised README with new features, migration status, and project documentation.

Co-Authored-By: Srikant Sahoo <srikantsahoo3601@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
     "@google/genai": "^1.38.0",
-    "react-dom": "^19.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "jszip": "3.10.1",
     "lucide-react": "^0.563.0",
-    "jszip": "3.10.1"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
